...
        DispatchQueue.main.async {
        let alertController = UIAlertController(
            title:"Unable to get weather data",
            message: "Please, try again later",
            preferredStyle: .alert)
        let action = UIAlertAction(title: "Ok", style: .cancel)
            action.accessibilityIdentifier = "alertOKAction"
        alertController.addAction(action)
            target.present(alertController, animated: true)
        }
    }
}

